@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4SteppingManager.hh,v 1.1 1999-01-07 16:14:28 gunter Exp $
+// $Id: G4SteppingManager.hh,v 1.2 1999-03-24 04:42:21 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -194,7 +194,7 @@ class G4SteppingManager
 
    G4UserSteppingAction* fUserSteppingAction;
 
-   G4SteppingVerbose* fVerbose;
+   G4VSteppingVerbose* fVerbose;
 
    G4double PhysicalStep;
    G4double GeometricalStep;
