@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4TrajectoryPoint.hh,v 1.1 1999-01-07 16:14:30 gunter Exp $
+// $Id: G4TrajectoryPoint.hh,v 1.2 1999-03-24 04:45:08 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
